Edited call to action section. Pending fix on alignment of text.

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 50px 0;
 }
 
 .random-information-title {
@@ -147,7 +148,8 @@ button {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-color: #f9faf8;
+    background-color: #e5e7eb;
+    margin: 100px 0;
     padding: 50px 200px;
 }
 
@@ -164,4 +166,34 @@ button {
     font-weight: 900;
 }
 
+/* Call To Action Section */
+.call-to-action {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+    background-color: #3882f6;
+    margin: 100px 150px;
+    padding: 50px;
+    border-radius: 15px;
+}
+
+.call-to-action-left {
+    text-align: left;
+    outline: 2px solid red;
+}
+
+.call-to-action-title {
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.call-to-action-description {
+    font-size: 18px;
+    color: #f9faf8; 
+}
+
+.cta-button {
+    border: 2px solid white;
+}
 /* to use font sizing: 48px ; 36px ; 24px ; 18px */
